fix horizontal scroll and support number argu in data block

--- a/package/styles/index.css
+++ b/package/styles/index.css
@@ -126,7 +126,6 @@ body {
 
 /* style for scrollbar zindex */
 .luckysheet-scrollbar-y,
-.luckysheet-scrollbar-x,
 .luckysheet-bottom-controll-row {
   z-index: 1 !important;
 }
